--- a/2025R&Eppt/intro.tex
+++ b/2025R&Eppt/intro.tex
@@ -52,26 +52,31 @@
 
 \begin{frame}{Arc Presentation}
     \centering
-    \begin{tabu}{X[c]x[c]X[c]X[c]}
-        \raisebox{-1cm}{\includegraphics[height=1cm]{Trefoilimage.png}} &
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{Trefoilimage.png}} &
         $\Longleftrightarrow$ &
-        \raisebox{-1cm}{\includegraphics[height=1.75cm]{trefoil arc presentation.png}} &
-        \raisebox{-1cm}{\includegraphics[height=1cm]{trefoil_grid.png}} \\
-        Trefoil & & Open Book & Grid Diagram
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{trefoil arc presentation.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{trefoil_grid.png}} \\
+        Trefoil & & Open Book & & Grid Diagram
     \end{tabu}
     \centering
-    \begin{tabu}{X[c]X[c]X[c]}
-        \raisebox{-1cm}{\includegraphics[height=1cm]{theta52.png}} &
-        \raisebox{-1cm}{\includegraphics[height=1.75cm]{openbook.png}} &
-        \raisebox{-1cm}{\includegraphics[height=1cm]{grid.png}} \\
-        $\theta_{5,2}$ & Open Book & Grid Diagram
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{theta52.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{openbook.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{grid.png}} \\
+        $\theta_{5,2}$ & & Open Book & & Grid Diagram
     \end{tabu}
     \centering
-    \begin{tabu}{X[c]X[c]X[c]}
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
         \raisebox{-1cm}{\includegraphics[height=2cm]{handcuff.png}} &
-        \raisebox{-1cm}{\includegraphics[height=1.75cm]{handcuff_openbook.png}} &
-        \raisebox{-1cm}{\includegraphics[height=1cm]{handcuff grid diagram.png}} \\
-        $\Phi_{2,1}$ & Open Book & Grid Diagram
+        $\Longleftrightarrow$ &
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{handcuff_openbook.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{handcuff grid diagram.png}} \\
+        $\Phi_{2,1}$ & & Open Book & & Grid Diagram
     \end{tabu}
 \end{frame}
 
