--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -2,13 +2,13 @@
 
 \begin{frame}{Upper Bounds of Arc Index}
 	\begin{thm}[Lee et al., 2018]
-		Let $G$ be any spatial graph. Then,
+		Let $G$ be a spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
 		where $e$ and $b$ are the number of edges and bouquet cut, respectively.
 	\end{thm}
 
 	\begin{corollary}
-		Let $T$ be any non-trivial prime $\theta$-curve or handcuff graph. Then,
-        \[ \alpha(T) \le c(T) + 3. \]
+		Let $G$ be a non-trivial prime $\theta$-curve or handcuff graph. Then,
+        \[ \alpha(G) \le c(G) + 3. \]
 	\end{corollary}
 \end{frame}
