--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -91,12 +91,12 @@
 
 \begin{frame}{Determinants of the THC-Cromwell matrices}
 	\begin{thm}
-		Let $M$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph. \\
+		Let $G$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph. \\
 		\begin{itemize}
-			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
-			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
+			\item det*($G$) = $\pm1$ $\iff$ $G$ represents $\theta$-curve
+			\item det*($G$) = $0$ or $\pm2$ $\iff$ $G$ represents handcuff graph
 		\end{itemize}
-		 where det*($M$) = determinant of H-deletion matrix of $M$
+		 where det*($G$) = determinant of H-deletion matrix of $G$
 	\end{thm}
 	\mypf
 	\begin{tabu}{X[5c]X[c]X[5c]X[2c]X[5c]}
@@ -117,7 +117,7 @@
 
 \begin{frame}{Proof of Theorem}
 	\begin{enumerate}
-		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
+		\item[\mybf{CASE 1.}] \mybf{When $G$ represents $\theta$-curve}
 	\end{enumerate}
 	\mybfff{Line-shape} \\
 	\begin{tabu}{X[5c]X[c]X[5c]X[c]X[5c]}
@@ -158,5 +158,5 @@
 			0 & 0 & 0 & 0 & \textcolor{red}{1}\\
 		\end{bmatrix}$ 
 	\end{tabu}
-	So det*($M$) = $\pm1$
+	So det*($G$) = $\pm1$
 \end{frame}
