--- a/2025R&Eppt/cromwell2.tex
+++ b/2025R&Eppt/cromwell2.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Proof of Theorem}
 	\begin{enumerate}
-		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
+		\item[\mybf{CASE 2.}] \mybf{When $G$ represents handcuff graph}
 	\end{enumerate}
 	\mybfff{T-loop} \\
 	\begin{tabu}{X[6c]X[c]X[4c]X[2c]X[2c]}
@@ -35,12 +35,12 @@
 			O & \textcolor{RoyalBlue}{Line-shape} \\
 		\end{bmatrix}$ &
 	\end{tabu}
-	So det($M$) = 0 or $\pm2$
+	So det($G$) = 0 or $\pm2$
 \end{frame}
 
 \begin{frame}{Proof of Theorem}
 	\begin{enumerate}
-		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
+		\item[\mybf{CASE 2.}] \mybf{When $G$ represents handcuff graph}
 	\end{enumerate}
 		\mybfff{\circled{i} T-loop \& Line-shape}\\
 	\begin{tabu}{X[3c]X[2c]X[3c]X[2c]}
@@ -72,5 +72,5 @@
 			O & \textcolor{RoyalBlue}{Line-shape} \\
 		\end{bmatrix}$ &
 	\end{tabu} \\
-	So det($M$) = 0 or $\pm2$
+	So det($G$) = 0 or $\pm2$
 \end{frame}
