--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -126,14 +126,14 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
-%\include{cromwell1.tex}
-%\include{cromwell2.tex}
-%\include{U_Bound.tex}
+\include{intro.tex}
+\include{cromwell1.tex}
+\include{cromwell2.tex}
+\include{U_Bound.tex}
 \include{L_Bound.tex}
-%\include{Result.tex}
-%\include{Further Research.tex}
-%\include{reference.tex}
+\include{Result.tex}
+\include{Further Research.tex}
+\include{reference.tex}
 
 % \begin{frame}[standout,plain]
 % 	\TINY
