--- a/2025R&Eppt/cromwell2.tex
+++ b/2025R&Eppt/cromwell2.tex
@@ -72,5 +72,5 @@
 			O & \textcolor{RoyalBlue}{Line-shape} \\
 		\end{bmatrix}$ &
 	\end{tabu} \\
-	So det($G$) = 0 or $\pm2$
+	So det($G$) = $0$ or $\pm2$
 \end{frame}
