--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -45,22 +45,22 @@
 \begin{frame}{Lower Bound from Constituent Knots/Links}
 	\bigskip
 	\begin{thm}
-		Let $H$ be a handcuff graph, and $L$ be the constituent link of $H$.
+		Let $G$ be a handcuff graph, and $L$ be the constituent link of $H$.
 		If $L$ is an alternating and non-split link, then
 		\[
 			\alpha(H) \ge c(L) + 3.
 		\]
 	\end{thm}
 
-	\begin{corollary}
-		Let $H$ be a handcuff graph, and $L$ be the constituent link of $H$. If $L$ is alternating and non-split, then
-		\[
-			\alpha(H) = c(L) + 3.
-		\]
-	\end{corollary}
+	%\begin{corollary}
+	%	Let $H$ be a handcuff graph, and $L$ be the constituent link of $H$. If $L$ is alternating and non-split, then
+	%	\[
+	%		\alpha(H) = c(L) + 3.
+	%	\]
+	%\end{corollary}
 
 	\center
-	\includegraphics[width=0.2\linewidth]{hopf.png}
+	\includegraphics[width=0.3\linewidth]{hopf.png}
 \end{frame}
 
 \begin{frame}{Stacked Tangle of an $\theta$-Curve and Handcuff Graph}
@@ -75,7 +75,7 @@
 		& Handcuff Graph
 	\end{tabu}
 
-	\seprule
+	%\seprule
 \end{frame}
 
 
@@ -112,7 +112,7 @@
 \end{frame}
 
 
-\begin{frame}{Lower Bound from Yamada Polynomial}
+\begin{frame}{Sketch of Proof}
 	\begin{prop}
 		Let $S_G$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph $G$ \myem{without nested caps}.
 		Then
@@ -131,7 +131,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Sketch of Proof}
 	\begin{prop}
 		Let $S_G$ be a reduced simple closure of stacked tangle of a $\theta$-curve or handcuff graph $G$
 		corresponding to minimal arc presentation of $G$.
@@ -151,7 +151,7 @@
 \end{frame}
 
 
-\begin{frame}{Proof of Theorem}
+\begin{frame}{Sketch of Proof}
 	\begin{itemize}
 		\item Take a cap and add a positive or negative curl
 		$$\raisebox{-1cm}{\includegraphics[height=2cm]{ST1_new}} \quad \longrightarrow \quad \raisebox{-1cm}{\includegraphics[height=2cm]{ST2_new}}$$
@@ -179,7 +179,7 @@
 \end{frame}
 
 
-\begin{frame}{Proof of Theorem}
+\begin{frame}{Sketch of Proof}
 	\begin{thm}
 	Let $G$ be a $\theta$-curve or handcuff graph.
 	Then
