--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -4,7 +4,7 @@
 	\begin{thm}[Lee et al., 2018]
 		Let $G$ be a spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
-		where $e$ and $b$ are the number of edges and bouquet cut, respectively.
+		where $e$ and $b$ are the number of edges and bouquet cut points, respectively.
 	\end{thm}
 
 	\begin{corollary}
