--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -92,7 +92,7 @@
 \input{setup-plots.tex}
 
 
-\title{The Determinant and Arc Indices of \\ $\theta$-Curves and Handcuff Graphs}
+\title{The Determinants and Arc Indices of \\ $\theta$-Curves and Handcuff Graphs}
 \author{
 	\centerline{
 	Eunchan Cho\inst{1} \and
