--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -45,11 +45,12 @@
 \begin{frame}{Lower Bound from Constituent Knots/Links}
 	\bigskip
 	\begin{thm}
-		Let $G$ be a handcuff graph, and $L$ be the constituent link of $H$.
+		Let $H$ be a handcuff graph, and $L$ be the constituent link of $H$.
 		If $L$ is an alternating and non-split link, then
 		\[
-			\alpha(H) \ge c(L) + 3.
+			\alpha(H) \ge c(L) + 3,
 		\]
+		where $c(L)$ is the crossing number of $L$.
 	\end{thm}
 
 	%\begin{corollary}
