--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -1,4 +1,4 @@
-\section{Determinants of $\theta$-Curves and Handcuff Graphs}
+\section{Determinants of \\ $\theta$-Curves and Handcuff Graphs}
 \begin{frame}{THC-Cromwell matrix}
 	\begin{itemize}
 		\item The \term{Cromwell Matrix} of a knot is an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s.
