--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -1,6 +1,7 @@
 \section{Upper Bounds of Arc Index}
 
 \begin{frame}{Upper Bounds of Arc Index}
+	For a spatial graph $G$, $c(G)$ denotes the crossing number of $G$.
 	\begin{thm}[Lee et al., 2018]
 		Let $G$ be a spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
