--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -5,17 +5,19 @@
 		\item The \term{THC-Cromwell matrix} is an expansion of Cromwell matrix into $\theta$-curves and handcuff graphs.
 	\end{itemize}
 	\vspace{1cm}
-	\begin{tabu}{X[5c]X[5c]X[c]X[5c]}
+	\begin{tabu}{X[3c]X[c]X[3c]X[3c]X[c]X[3c]}
+		\raisebox{-1.25cm}{\includegraphics[height=2.5cm]{figure/theta.png}} &
+		$\longmapsto$ &
 		$\begin{bmatrix}
 			1 & 0 & 1 & 0 & 0\\
 			0 & 1 & 0 & 1 & 0\\
 			0 & 0 & 1 & 0 & 1\\
 		    1 & 0 & 0 & 1 & 0\\
 			0 & 1 & 0 & 0 & 1
-		\end{bmatrix}$&
-		\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/excromwell.png}} &			
+		\end{bmatrix}$ &
+		\raisebox{-1.15cm}{\includegraphics[height=2.3cm]{figure/excromwell.png}} &			
 		$\longmapsto$ &
-		\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/cromwell.png}} &
+		\raisebox{-1.25cm}{\includegraphics[height=2.5cm]{figure/cromwell.png}} &
 	\end{tabu}
 	
 \end{frame}
