--- a/2025R&Eppt/cromwell2.tex
+++ b/2025R&Eppt/cromwell2.tex
@@ -44,7 +44,7 @@
 	\end{enumerate}
 		\mybfff{\circled{i} T-loop \& Line-shape}\\
 	\begin{tabu}{X[3c]X[2c]X[3c]X[2c]}
-			cromwell matrix&
+			THC-Cromwell matrix&
 			$\xmapsto{H-deletion}$ &
 			H-deletion matrix&
 			$\xmapsto[operations]{seperating}$ &
@@ -62,8 +62,8 @@
 		\end{bmatrix}$ &
 	\end{tabu}
 	\mybfff{\circled{ii} Knot \& Line-shape}\\
-	\begin{tabu}{X[3c]X[2c]X[3c]X[2c]X[3c]}
-			cromwell matrix&
+	\begin{tabu}{X[5c]X[2c]X[4c]X[2c]X[4c]}
+			THC-cromwell matrix&
 			$\xmapsto{H-deletion}$ &
 			H-deletion matrix&
 			$\xmapsto[operations]{seperating}$ &
