--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -121,6 +121,16 @@
 \titlegraphic{\hfill\includegraphics[height=.1\textheight]{ksa_왼쪽로고3}}
 
 
+% \includeonly{intro.tex}
+% % \includeonly{cromwell1.tex}
+% % \includeonly{cromwell2.tex}
+% % \includeonly{U_Bound.tex}
+% % \includeonly{L_Bound.tex}
+% % \includeonly{Result.tex}
+% % \includeonly{Further Research.tex}
+% % \includeonly{reference.tex}
+
+
 \begin{document}
 \begin{frame}[plain]
 	\titlepage
