--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -126,7 +126,7 @@
 
 	\mypf
 	\begin{itemize}
-		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} and \myem{semi-simple caps}, repectively.
+		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simple caps} and \myem{semi-simple caps}, repectively.
 		\item Use double mathematical induction of $(c_s + c_{ss}, n)$.
         $$\includegraphics[width=.35\linewidth]{simplecap.png}$$
 	\end{itemize}
