--- a/2025R&Eppt/intro.tex
+++ b/2025R&Eppt/intro.tex
@@ -81,6 +81,36 @@
 \end{frame}
 
 \begin{frame}{Grid Diagram}
+    \centering
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{Trefoilimage.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{trefoil arc presentation.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{trefoil_grid.png}} \\
+        Trefoil & & {\footnotesize Arc Presentation} & & Grid Diagram
+    \end{tabu}
+    \centering
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{theta52.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{openbook.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{grid.png}} \\
+        $\theta_{5,2}$ & & {\footnotesize Arc Presentation} & & Grid Diagram
+    \end{tabu}
+    \centering
+    \begin{tabu} to .8\linewidth{X[c]X[c]X[c,1.5]X[c]X[c,1.5]}
+        \raisebox{-1cm}{\includegraphics[height=2cm]{handcuff.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.875cm}{\includegraphics[height=1.75cm]{handcuff_openbook.png}} &
+        $\Longleftrightarrow$ &
+        \raisebox{-0.5cm}{\includegraphics[height=1cm]{handcuff grid diagram.png}} \\
+        $\Phi_{2,1}$ & & {\footnotesize Arc Presentation} & & Grid Diagram
+    \end{tabu}
+\end{frame}
+
+\begin{frame}{Grid Diagram}
     A \term{grid diagram} of $\theta$-curve or handcuff graph is a diagram with only vertical and horizontal strands.
 	\begin{itemize}
         \item (number of vertical strands) + 1 = (number of horizontal strands)
