--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -103,7 +103,7 @@
 
 \begin{frame}{Lower Bound from Yamada Polynomial}
 	\begin{thm}
-	Let $G$ be a $\theta$-curve or handcuff graph.
+	Let $G$ be a non-trivial $\theta$-curve or handcuff graph.
 	Then
 	\[
 		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
@@ -125,7 +125,7 @@
 
 	\mypf
 	\begin{itemize}
-		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} and \myem{semi-simple caps}, repectively.
+		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} and \myem{semi-simple caps}, respectively.
 		\item Use double mathematical induction of $(c_s + c_{ss}, n)$.
         $$\includegraphics[width=.35\linewidth]{simplecap.png}$$
 	\end{itemize}
@@ -145,8 +145,8 @@
 	\mypf
 
 	\begin{itemize}
-		\item $S_G$ is a reduced simple closure of stacked tangle corresponding to minimal arc presentation.
-		\item The number of caps $c$ in $S_G$ is exactly arc index of $G$, $\alpha(G)$.
+		\item $S_G$ is a reduced simple closure of stacked tangle corresponding to a minimal arc presentation.
+		\item The number of caps $c$ in $S_G$ is exactly the arc index of $G$, $\alpha(G)$.
 	\end{itemize}
 \end{frame}
 
@@ -181,7 +181,7 @@
 
 \begin{frame}{Proof of Theorem}
 	\begin{thm}
-	Let $G$ be a $\theta$-curve or handcuff graph.
+	Let $G$ be a non-trivial $\theta$-curve or handcuff graph.
 	Then
 	\[
 		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
@@ -190,7 +190,7 @@
 
 	\mypf
 
-	Let $S_G$ be a reduce simple closure of stacked tangle of a $\theta$-curve or handcuff graph $G$
+	Let $S_G$ be a reduced simple closure of stacked tangle of a $\theta$-curve or handcuff graph $G$
 	corresponding to minimal arc presentation of $G$.
 
 	\begin{itemize}
