--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -104,10 +104,10 @@
 
 \begin{frame}{Lower Bound from Yamada Polynomial}
 	\begin{thm}
-	Let $G$ be a non-trivial $\theta$-curve or handcuff graph.
+	Let $G$ be a $\theta$-curve or handcuff graph.
 	Then
 	\[
-		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
+		2 + \sqrt{| \max\deg_xR(S_G) - \min\deg_xR(S_G) - 4 |} \le \alpha(G).
 	\]
 	\end{thm}	
 \end{frame}
@@ -182,10 +182,10 @@
 
 \begin{frame}{Sketch of Proof}
 	\begin{thm}
-	Let $G$ be a non-trivial $\theta$-curve or handcuff graph.
+	Let $G$ be a $\theta$-curve or handcuff graph.
 	Then
 	\[
-		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
+		2 + \sqrt{| \max\deg_xR(S_G) - \min\deg_xR(S_G) - 4 |} \le \alpha(G).
 	\]
 	\end{thm}	
 
