--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -23,7 +23,7 @@
 \end{frame}
 
 \begin{frame}{Lower Bound from Constituent Knots/Links}
-	\begin{thm}[Lee, 2023]
+	\begin{thm}[Lee^{\dagger}, 2023]
 		Let $T$ be a $\theta$-curve
 		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
 		Then
@@ -32,7 +32,7 @@
 		\]
 	\end{thm}
 	
-	\begin{thm}[Lee, 2023]
+	\begin{thm}[Lee^{\dagger}, 2023]
 		Let $T$ be a $\theta$-curve
 		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
 		Then
