--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -2,7 +2,7 @@
 
 \begin{frame}{Upper Bounds of Arc Index}
 	For a spatial graph $G$, $c(G)$ denotes the crossing number of $G$.
-	\begin{thm}[Lee et al., 2018]
+	\begin{thm}[Lee\textsuperscript{*} et al., 2018]
 		Let $G$ be a spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
 		where $e$ and $b$ are the number of edges and bouquet cut points, respectively.
