--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -1,7 +1,7 @@
 \section{Determinants of \\ $\theta$-Curves and Handcuff Graphs}
 \begin{frame}{THC-Cromwell matrix}
 	\begin{itemize}
-		\item The \term{Cromwell Matrix} of a knot is an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s.
+		\item The \term{Cromwell matrix} of a knot is an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s.
 		\item The \term{THC-Cromwell matrix} is an expansion of Cromwell matrix into $\theta$-curves and handcuff graphs.
 	\end{itemize}
 	\vspace{1cm}
@@ -62,7 +62,7 @@
 
 	
 \end{frame}
-\begin{frame}{H-deletion of THC-Cromwell matricies}
+\begin{frame}{H-deletion of THC-Cromwell matrices}
 	\begin{itemize}
 		\item The \term{vertex-row} of THC-Cromwell matrix $M$ is a row which contains three 1s, $M_{ia},M_{ib},M_{ic}$, where $a<b<c$, as its elements.
 		\item The \term{side-column} of THC-Cromwell matrix $M$ is a column which contains the leftmost 1 of vertex-row $(M_{ia})$ or the rightmost 1 of vertex row $(M_{ic})$.
@@ -92,14 +92,14 @@
 \end{frame}
 
 \begin{frame}{Determinants of the THC-Cromwell matrices}
-	\begin{thm}
-		Let $M_G$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph $G$. \\
+	\begin{newthm}
+		Let $M_G$ be a THC-Cromwell matrix of $\theta$-curve or handcuff graph $G$. \\
 		\begin{itemize}
 			\item det*($M_G$) = $\pm1$ $\iff$ $M_G$ represents $\theta$-curve
 			\item det*($M_G$) = $0$ or $\pm2$ $\iff$ $M_G$ represents handcuff graph
 		\end{itemize}
 		 where det*($M_G$) = determinant of H-deletion matrix of $M_G$
-	\end{thm}
+	\end{newthm}
 	\mypf
 	\begin{tabu}{X[5c]X[c]X[5c]X[2c]X[5c]}
 			$\begin{bmatrix}
