--- a/2025R&Eppt/intro.tex
+++ b/2025R&Eppt/intro.tex
@@ -130,9 +130,9 @@
         \raisebox{-1cm}{\includegraphics[height=4cm]{grid_diagram_2.png}} \\
     \end{tabu}
     \begin{thm}
-    Every $\theta$-curve and handcuff graph admit a grid diagram.
+    Every $\theta$-curve and handcuff graph admits a grid diagram.
     \end{thm}
     \begin{corollary}
-    Every $\theta$-curve and handcuff graph admit an arc presentation.
+    Every $\theta$-curve and handcuff graph admits an arc presentation.
     \end{corollary}
 \end{frame}
