--- a/Final_report/Final_report.tex
+++ b/Final_report/Final_report.tex
@@ -378,7 +378,7 @@ Now, we are going to count n, which is the number of $1$s in the middle column a
     We'll call it as the \textit{T-shape}.
     \begin{figure*}[h!]
         \centering
-        \subfloat{\includegraphics[width=0.2\textwidth]{figure/T-cromwell.png}}
+        \subfloat{\includegraphics[width=0.2\textwidth]{figure/matrix7.png}}
         \hspace{0.05\linewidth}
         \subfloat{\includegraphics[width=0.2\textwidth]{figure/T-shape.png}}
         \caption{Examples of T-shape (Red line is a deleted line and blue line is a T-shape)}
@@ -398,7 +398,7 @@ Now, we are going to count n, which is the number of $1$s in the middle column a
     %\end{pmatrix}$$
     \begin{figure*}[h!]
         \centering
-        \subfloat{\includegraphics[width=0.2\textwidth]{figure/L-shape.png}}
+        \subfloat{\includegraphics[width=0.2\textwidth]{figure/matrix4.png}}
         \hspace{0.05\linewidth}
         \subfloat{\includegraphics[width=0.2\textwidth]{figure/Line-shape.png}}
         \caption{Examples of Line-shape (Red line is a deleted line and blue line is a Line-shape)}
