--- a/Final_report/Final_report.tex
+++ b/Final_report/Final_report.tex
@@ -99,7 +99,7 @@
 
 
 \begin{center}
-    {\LARGE \textbf{엇갈림수 7 이하의 세타커브와 수갑 그래프의 최소 그물 그림}\par}
+    {\LARGE \textbf{세타 커브와 수갑 그래프의 행렬식과 호 지수}\par}
     \vspace{0.3cm}
     {\large 조은찬\textsuperscript{1}, 신정원\textsuperscript{1}, 서보연\textsuperscript{1}, 최민호\textsuperscript{1}, 김훈\textsuperscript{2}, 진교택\textsuperscript{3}}\\
     {\large \textsuperscript{1}연구자, 한국과학영재학교 \par \textsuperscript{2}책임지도자, 한국과학영재학교 \par \textsuperscript{3}공동지도자, 한국과학기술원 수리과학과\par}
@@ -115,14 +115,14 @@
 
 
     \begin{abstract}
-        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림수(crossing number) $7$까지의 세타커브(theta-curve)과 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)에 기반한 파이썬 프로그램을 작성하여 이를 확인해 보았다.\\ \\
-        \textbf{중심어 : 세타커브, 수갑 그래프, 호 지수, 최소 그물 그림}
+        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) 7까지의 세타 커브 (theta-curve)와 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)과 그 후보군을 구해 정리함으로써 그들의 호 지수(arc index)를 확정하고자 하였다. 이 과정에서 세타 커브와 수갑 그래프의 행렬식을 정의하고 이를 이용하여 두 커브를 구분하는 결과를 얻었다. 또한 세타 커브와 수갑 그래프에 대한 호 지수의 상한과 하한의 결과를 정립하고, 하한에 대한 정리를 쌓인 얽힘 표현(stacked tangle representation)을 통해 완전히 증명하여 호 지수를 추정할 수 있었다. 더 나아가 야마다 다항식(Yamada polynomial)에 기반한 파이선 프로그램을 작성하여 이를 확인해 보았다.
+        \textbf{중심어 : 세타 커브, 수갑 그래프, 호 지수, 최소 그물 그림}
         \\
     \end{abstract}
 
     \vspace{1cm} % 한글/영문 사이 간격
 
-    {\LARGE \textbf{Minimal Grid Diagrams of \\ Theta-Curves and Handcuff Graphs up to 7 Crossings}\par}
+    {\LARGE \textbf{The Determinants and Arc Indices of\\$\theta$-Curves and Handcuff Graphs}\par}
     \vspace{0.3cm}
     {\large Eunchan Cho\textsuperscript{1}, Jeongwon Shin\textsuperscript{1}, Boyeon Seo\textsuperscript{1}, Minho Choi\textsuperscript{1}, Hun Kim\textsuperscript{2}, Gyotaek Jin\textsuperscript{3}}\\
     {\large \textsuperscript{1}Researcher, Korea Science Academy of KAIST \par \textsuperscript{2}Supervisor, Korea Science Academy of KAIST\par \textsuperscript{3}Co-Supervisor, Department of Mathematical Sciences, Korea Advanced Institute of Science and Technology}
@@ -153,10 +153,10 @@ Also, we used some mathematical methods to found out the minimal grid diagrams b
 \section{Theoretical Background}
 
 \begin{defn}
-    \textit{Theta-curve} is a spatial knot on $3$-sphere which has $2$ vertices and $3$ edges. 
+    \textit{$\theta$-curve} is a graph embedded in $S^3$, which consists of two vertices $v_1$, $v_2$ and three edges $e_1$, $e_2$, $e_3$, such that each edge joins the vertices.
 \end{defn}
 \begin{defn}
-    \textit{Handcuff graph} consists of $2$ loops and $1$ edge joining the loops.
+    \textit{Handcuff graph} is a graph embedded in $S^3$ consisting of two vertices ($v_1$, $v_2$) and three edges ($e_1$, $e_2$, $e_3$), where $e_3$ has distinct endpoints $v_1$ and $v_2$, and $e_1$ and $e_2$ are loops based at $v_1$ and $v_2$.
 \end{defn}
 
 \begin{figure*}[h!]
@@ -774,575 +774,14 @@ Now, using the stacked tangle representation and the Yamada polynomial, we will 
     \[ \alpha(G) \geq  \frac{5+\sqrt{4\mathrm{spr}(R(G))-15}}{2}. \]
 \end{proof}
 
-\section{Research Result}
-The Python code did not work since the Topoly Library had error of the Yamada polynomial function. However, we were able to examine some of our answers by the Python code.
-We used the bounds from theoretical background, and used the Python code to find the arc index. If we could not find the arc index by the computer, we directly found the arc index by drawing the binding circle of the theta-curve.
- Also, we were able to found the bounds of the arc index of the handcuff graphs. The following result of the graphs with arc index is at below. The graphs with confirmed arc index is colored in green.\\
-  \begin{figure}[H]
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_3_1.png}
-    \caption{$3_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_4_1.png}
-    \caption{$4_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_1.png}
-    \caption{$5_1$}
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_2.png}
-    \caption{$5_2$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_3.png}
-    \caption{$5_3$}
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_4.png}
-    \caption{$5_4$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_5.png}
-    \caption{$5_5$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_6.png}
-    \caption{$5_6$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_5_7.png}
-    \caption{$5_7$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_1.png}
-    \caption{$6_1$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_2.png}
-    \caption{$6_2$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_3.png}
-    \caption{$6_3$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_4.png}
-    \caption{$6_4$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_5.png}
-    \caption{$6_5$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_6.png}
-    \caption{$6_6$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_7.png}
-    \caption{$6_7$} 
-    \end{subfigure}
-      \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_8.png}
-    \caption{$6_8$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_9.png}
-    \caption{$6_9$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_10.png}
-    \caption{$6_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_11.png}
-    \caption{$6_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_12.png}
-    \caption{$6_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_13.png}
-    \caption{$6_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_14.png}
-    \caption{$6_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_15.png}
-    \caption{$6_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_6_16.png}
-    \caption{$6_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_1.png}
-    \caption{$7_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_2.png}
-    \caption{$7_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_3.png}
-    \caption{$7_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_4.png}
-    \caption{$7_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_5.png}
-    \caption{$7_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_6.png}
-    \caption{$7_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_7.png}
-    \caption{$7_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_8.png}
-    \caption{$7_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_9.png}
-    \caption{$7_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_10.png}
-    \caption{$7_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_11.png}
-    \caption{$7_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_12.png}
-    \caption{$7_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_13.png}
-    \caption{$7_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_14.png}
-    \caption{$7_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_15.png}
-    \caption{$7_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_16.png}
-    \caption{$7_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_17.png}
-    \caption{$7_{17}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_18.png}
-    \caption{$7_{18}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_19.png}
-    \caption{$7_{19}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_20.png}
-    \caption{$7_{20}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_21.png}
-    \caption{$7_{21}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_22.png}
-    \caption{$7_{22}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_23.png}
-    \caption{$7_{23}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_24.png}
-    \caption{$7_{24}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_25.png}
-    \caption{$7_{25}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_26.png}
-    \caption{$7_{26}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_27.png}
-    \caption{$7_{27}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_28.png}
-    \caption{$7_{28}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_29.png}
-    \caption{$7_{29}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_30.png}
-    \caption{$7_{30}$}
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_31.png}
-    \caption{$7_{31}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_32.png}
-    \caption{$7_{32}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_33.png}
-    \caption{$7_{33}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_34.png}
-    \caption{$7_{34}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_35.png}
-    \caption{$7_{35}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_36.png}
-    \caption{$7_{36}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_37.png}
-    \caption{$7_{37}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_38.png}
-    \caption{$7_{38}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_39.png}
-    \caption{$7_{39}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_40.png}
-    \caption{$7_{40}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_41.png}
-    \caption{$7_{41}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_42.png}
-    \caption{$7_{42}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_43.png}
-    \caption{$7_{43}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_44.png}
-    \caption{$7_{44}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_45.png}
-    \caption{$7_{45}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_46.png}
-    \caption{$7_{46}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_47.png}
-    \caption{$7_{47}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_48.png}
-    \caption{$7_{48}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_49.png}
-    \caption{$7_{49}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_50.png}
-    \caption{$7_{50}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_51.png}
-    \caption{$7_{51}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_52.png}
-    \caption{$7_{52}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_53.png}
-    \caption{$7_{53}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_54.png}
-    \caption{$7_{54}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_55.png}
-    \caption{$7_{55}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_56.png}
-    \caption{$7_{56}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_57.png}
-    \caption{$7_{57}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_58.png}
-    \caption{$7_{58}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_59.png}
-    \caption{$7_{59}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_60.png}
-    \caption{$7_{60}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_61.png}
-    \caption{$7_{61}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_62.png}
-    \caption{$7_{62}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_63.png}
-    \caption{$7_{63}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_64.png}
-    \caption{$7_{64}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/theta_7_65.png}
-    \caption{$7_{65}$} 
-    \end{subfigure}
-    \caption{Grid Diagram of the Theta-Curves Up to 7 Crossings}
-  \end{figure}
-
-  \begin{figure}[H]
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_2_1.png}
-    \caption{$2_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_4_1.png}
-    \caption{$4_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_5_1.png}
-    \caption{$5_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_1.png}
-    \caption{$6_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_2.png}
-    \caption{$6_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_3.png}
-    \caption{$6_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_4.png}
-    \caption{$6_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_5.png}
-    \caption{$6_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_6.png}
-    \caption{$6_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_7.png}
-    \caption{$6_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_8.png}
-    \caption{$6_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_6_9.png}
-    \caption{$6_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_1.png}
-    \caption{$7_{1}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_2.png}
-    \caption{$7_{2}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_3.png}
-    \caption{$7_{3}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_4.png}
-    \caption{$7_{4}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_5.png}
-    \caption{$7_{5}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_6.png}
-    \caption{$7_{6}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_7.png}
-    \caption{$7_{7}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_8.png}
-    \caption{$7_{8}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_9.png}
-    \caption{$7_{9}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_10.png}
-    \caption{$7_{10}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_11.png}
-    \caption{$7_{11}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_12.png}
-    \caption{$7_{12}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_13.png}
-    \caption{$7_{13}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_14.png}
-    \caption{$7_{14}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_15.png}
-    \caption{$7_{15}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_16.png}
-    \caption{$7_{16}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_17.png}
-    \caption{$7_{17}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_18.png}
-    \caption{$7_{18}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_19.png}
-    \caption{$7_{19}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_20.png}
-    \caption{$7_{20}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_21.png}
-    \caption{$7_{21}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_22.png}
-    \caption{$7_{22}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_23.png}
-    \caption{$7_{23}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_24.png}
-    \caption{$7_{24}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_25.png}
-    \caption{$7_{25}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_26.png}
-    \caption{$7_{26}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_27.png}
-    \caption{$7_{27}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_28.png}
-    \caption{$7_{28}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_29.png}
-    \caption{$7_{29}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_30.png}
-    \caption{$7_{30}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_31.png}
-    \caption{$7_{31}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_32.png}
-    \caption{$7_{32}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_33.png}
-    \caption{$7_{33}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_34.png}
-    \caption{$7_{34}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_35.png}
-    \caption{$7_{35}$} 
-    \end{subfigure}
-    \begin{subfigure}{0.075\textwidth}
-    \includegraphics[width=1.25cm]{../Midterm_Poster/grid_diagram/handcuff_7_36.png}
-    \caption{$7_{36}$} 
-    \end{subfigure}
-    \caption{Grid Diagram of the Handcuff Graphs Up to 7 Crossings}
-  \end{figure}
+\include{result.tex}
 
 
 \section{Further Researches}
     We want to fix every arc index of handcuff graph and theta-curve graph up to $7$ crossings.
     Also, we want to apply bounds of spatial graphs to knots.
     Since we found the minimal diagram of some theta-curves and handcuff graphs up to $7$ crossings, it can be used as reference for other researches.
+    Moreover, since we could not use the Topoly package, we would like to use another tool for examining the arc indicies.
 
 \section*{References}
     \begin{enumerate}
