--- a/Final_report/Final_report.tex
+++ b/Final_report/Final_report.tex
@@ -117,7 +117,7 @@
 
     \begin{abstract}
         본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) 7까지의 세타 커브 (theta-curve)와 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)과 그 후보군을 구해 정리함으로써 그들의 호 지수(arc index)를 확정하고자 하였다. 이 과정에서 세타 커브와 수갑 그래프의 행렬식을 정의하고 이를 이용하여 두 커브를 구분하는 결과를 얻었다. 또한 세타 커브와 수갑 그래프에 대한 호 지수의 상한과 하한의 결과를 정립하고, 하한에 대한 정리를 쌓인 얽힘 표현(stacked tangle representation)을 통해 완전히 증명하여 호 지수를 추정할 수 있었다. 더 나아가 야마다 다항식(Yamada polynomial)에 기반한 파이선 프로그램을 작성하여 이를 확인해 보았다.
-        \textbf{중심어 : 세타 커브, 수갑 그래프, 호 지수, 최소 그물 그림}
+        \\ \textbf{중심어 : 세타 커브, 수갑 그래프, 호 지수, 최소 그물 그림}
         \\
     \end{abstract}
 
