--- a/Final_report/Final_report.tex
+++ b/Final_report/Final_report.tex
@@ -274,6 +274,28 @@ point (by RV)
 \end{itemize}
 \end{itemize}
 
+\begin{figure*}[h]
+    \centering
+    \begin{subfigure}{0.2\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{figure/stacked.png}
+        \caption{(a)}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.2\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{figure/stacked_theta.png}
+        \caption{(b)}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics[width=\linewidth]{figure/stacked_handcuff.png}
+        \caption{(c)}
+    \end{subfigure}
+    \caption{Stacked tangle representations.}
+\end{figure*}
+
 \textit{Simple closure} of stacked tangle is a stacked tangle with \textit{caps} satisfying following properties:
 \begin{itemize}
     \item A \textit{cap} is a simple arc in outside of stacked tangle joining end points of arcs or line segments
