--- a/Final_report/Final_report.tex
+++ b/Final_report/Final_report.tex
@@ -590,11 +590,11 @@ For any $\theta$-curve $\theta$, $$\alpha(\theta)\geq\frac{1+\sqrt{f(\alpha(\the
      \end{cases} \right).$$
 \end{theorem}
 
-\begin{theorem}[2]
+\begin{prop}[2]
 For $\theta$-curve $T$,
 \[ \alpha(T) \leq c(T) + 3 \]
 where $c(T)$ is the crossing number of $T$.
-\end{theorem}
+\end{prop}
 
 Now, for the handcuff graph, the followings hold.
 
@@ -682,13 +682,13 @@ It is known that, for some integer $n$, the product $(-x)^n R(G)$ (where $R(G)$ 
 
 Now, using the stacked tangle representation and the Yamada polynomial, we establish lower bounds for the arc index of $\theta$-curves and handcuff graphs.
 
-\begin{theorem}
+\begin{prop}
 Let $S_G$ be the simple closure of a stacked tangle of a $\theta$-curve or handcuff graph $G$. Then
 \[
     \max\deg_x R(G) \leq c+n, \quad \min\deg_x R(G) \geq -(c+n),
 \]
 where $c$ and $n$ are the number of caps and crossings in $S_G$, respectively.
-\end{theorem}
+\end{prop}
 
 \begin{proof}
 Let a \emph{simple cap} be a cap connecting two simple disks, and a \emph{semi-simple cap} be a cap connecting a simple disk and a non-simple disk.
