--- a/FInal_Poster/창의재단.tex
+++ b/FInal_Poster/창의재단.tex
@@ -56,13 +56,14 @@
 %\title{Arc Indices of Theta-Curves and Handcuff Graphs}
 %\titlegraphic[width=3cm]{figure/logo.png}
 
-\title{
-The Determinant and Arc Indices of $\theta$-Curves and Handcuff Graphs}
+\title{The Determinant and Arc Indices of\\
+$\theta$-Curves and Handcuff Graphs}
 
+\author{Cho, Eunchan$\mbox{}^*$ \hfill Shin, Jeongwon$\mbox{}^*$ \hfill Seo, Boyeon$\mbox{}^*$  \hfill Choi, Minho$\mbox{}^*$ \hfill Kim, Hun$\mbox{}^*$$\mbox{}^\ddagger$ \hfill Jin, GyoTaek$\mbox{}^\dagger$$\mbox{}^\ddagger$}
 
-\author{Cho, Eunchan \and  Shin, Jeongwon \and  Seo, Boyeon  \and  Choi, Minho  \and Kim, Hun (지도 교사) \and Jin, GyoTaek (지도 교사)}
+\institute{$\mbox{}^*$Korea Science Academy of KAIST \hfill $\mbox{}^\dagger$Department of Mathematical Science, KAIST \hfill $\mbox{}^\ddagger$Supervisor}
 
-\institute{Korea Science Academy of KAIST}
+\logoleft{\includegraphics[height=6.5cm]{figure/logo.png}}
 
 % ====================
 % Footer (optional)
@@ -72,18 +73,19 @@ The Determinant and Arc Indices of $\theta$-Curves and Handcuff Graphs}
   \begin{center}
     \begin{minipage}[c]{\linewidth}
       \centering
-      \makebox[0.3\linewidth][r]{%
-        \includegraphics[height=2cm]{logos/image.png}
+      \makebox[0.3\linewidth][c]{%
+        \includegraphics[height=2cm]{logos/gwagibu_logo.png}
       }%
       \makebox[0.4\linewidth][c]{%
-        \includegraphics[height=2cm]{logos/kaist_logo.png}
+        \includegraphics[height=2.1cm]{logos/image.png}
       }%
-      \makebox[0.3\linewidth][l]{%
-        \includegraphics[height=2cm]{logos/gwagibu_logo.png}
+      \makebox[0.3\linewidth][c]{%
+        \includegraphics[height=1.3cm]{logos/kaist_logo.png}
       }
     \end{minipage}
   \end{center}
 }
+
 
 
 % ====================
